bk_ida/gccida/c2/real_twop
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_twop/src/tree.c:1527:14: error: expected identifier or '('
 struct expr = expr->vector.elements; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_twop/src/tree.c:1528:7: error: expected expression
if (  struct expr == ( tree)global_trees 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_twop/src/tree.c:1537:12: error: expected expression
*( _OWORD *)x.r = *( _OWORD *)&expr->block.vars; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_twop/src/tree.c:1537:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x.r = *( _OWORD *)&expr->block.vars; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_twop/src/obj/tree.o] Error 1
